@@ -9,7 +9,7 @@ BEGIN {
 		plan skip_all => 'Needs DISPLAY';
 		exit 0;
 	}
-	plan( tests => 12 );
+	plan( tests => 16 );
 }
 
 use File::Spec::Functions ':ALL';
@@ -43,5 +43,9 @@ SCOPE: {
 	isa_ok( $config->host,    'Padre::Config::Host' );
 	isa_ok( $config->human,   'Padre::Config::Human' );
 	isa_ok( $config->project, 'Padre::Config::Project' );
-	is( scalar( keys %{ $config->project } ), 0, 'Project config is empty' );
+	is( scalar( keys %{ $config->project } ), 2, 'Project config is empty' );
+	ok( defined $config->project->fullname, '->fullname is defined' );
+	ok(      -f $config->project->fullname, '->fullname exists' );
+	ok( defined $config->project->dirname, '->dirname is defined' );
+	ok(      -d $config->project->dirname, '->dirname exists' );
 }
